--- a/views/partials/sideNavheader.ejs
+++ b/views/partials/sideNavheader.ejs
@@ -38,6 +38,10 @@
                 </div>
                 <i class="ri-add-line"></i>
               </div>
+              <div class="dashboardUserLike_section-1">
+                <i class="ri-pushpin-fill"></i>
+                  <a href="/likeSongs">Like Songs . <span>playlist</span></a>
+              </div>
            </div>
            <div class="dashboardUserPlaylist_songs">
             <% if(user.library.length == 0){%>
