--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -879,9 +879,8 @@ label {
   flex-direction: column;
   gap: 10px;
   width: 100%;
-  height: 80vh;
+  height: 78vh;
   /* border: 2px solid pink; */
-  overflow: hidden;
   overflow-y: auto;
   padding:  0 0.5vw;
   background-color: #171717;
@@ -890,8 +889,13 @@ label {
   border-radius: 20px;
 }
 .dashboardUserPlaylist_Header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   width: 100%;
-  height: 10vh;
+  height: 15vh;
   /* background-color: #6b6969; */
   padding: 0.5vw 0.5vw;
 }
@@ -900,7 +904,8 @@ label {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 8vh;
+  height: 50%;
+  /* background-color: red; */
   padding: 0.5vw 0.5vw;
 }
 .dashboardUserPlaylist_heading{
@@ -925,6 +930,7 @@ label {
   width: 100%;
   height: 5vh;
   /* background-color: #444; */
+  border-radius: 10px;
   margin-bottom: 0.5vw;
   margin-top: 0.5vw;
   padding: 0 0.5vw;
@@ -944,6 +950,28 @@ label {
   border-radius: 50%;
 }
 
+/*------------------------------------------------SONGS LIKE SECTION-------------------------------------------------------*/
+.dashboardUserLike_section-1{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  border-radius: 10px;
+  /* background-color: red; */
+  background-color: #444;
+  color: #1ccc5b;
+}
+.dashboardUserLike_section-1>a{
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+.ri-pushpin-fill{
+  padding: 0.5vw 0.5vw;
+  font-size: 1.1rem;
+}
 /*------------------------------SONGS FOR ---------------------------------------------------------------------------------*/
 .dashBoardAlbumSection {
   width: 100%;
@@ -1017,7 +1045,7 @@ label {
 .dashboardOtherSection {
   width: 100%;
   height: 14vh;
-  border: 3px solid #fff;
+  /* border: 3px solid #fff; */
 }
 /*-------------------------------------ALBUM UPLOAD CSS-----------------------------------------------------*/
 .albumUpload_Section {
@@ -1479,11 +1507,14 @@ input[type="file"]::file-selector-button :hover {
   height: 100%;
 }
 .AlbumDetail_PosterName {
-  padding: 0.5vw 0.5vw;
+  display: flex;
+  align-items: end;
   width: 100%;
-  height: 50%;
+  height: 30%;
   color: #fff;
-  font-size: 2.2vw;
+  font-size: 2.0vw;
+  padding: 1vw 0.5vw;
+  /* background-color: red; */
 }
 .AlbumDetail_playlistAuthenication {
   width: 100%;
@@ -1553,7 +1584,7 @@ th {
 .music_poster {
   width: 25%;
   height: 100%;
-  border: 3px solid black;
+  /* border: 3px solid black; */
 }
 .music_poster img {
   width: 100%;
@@ -1568,6 +1599,11 @@ th {
   padding: 0 0.5vw;
   width: 75%;
   height: 100%;
+  gap: 20px;
+  /* background-color: red; */
+}
+.music_title>#heart{
+  font-size: 1.5rem;
 }
 .music_title > h4 {
   font-size: 1.2vw;
@@ -1789,4 +1825,107 @@ th {
 }
 #head-3{
   padding:0.5vw 1.5vw;
+}
+/*------------------------------------------LIKE SONG CSS-----------------------------------------------------------*/
+.LikeSection{
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  height: 40vh;
+  /* border: 2px solid white; */
+  padding: 0.5vw 0.5vw;
+}
+.LikeSection_section-1{
+  width: 25%;
+  height: 100%;
+  background-color: #433083;
+  background-image: linear-gradient(135deg, #433083 0%, #645aa8 20%, #737d91 66%, #ffffff 100%);
+}
+.LikeSection_section-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  width: 75%;
+  height: 100%;
+}
+.LikeTable_Section_1{
+  width: 100%;
+  min-height: 50vh;
+  padding: 0.5vw 0.5vw;
+  /* background-color: aquamarine; */
+  /* border: 2px solid pink; */
+  margin-top: 1.2vw;
+  overflow: hidden;
+}
+#likeColorChange{
+  background-color: #433083;
+  background-image: linear-gradient(180deg, #433083 0%, #433083 33%, #1c1630 66%, #000000 100%);
+}
+#heart1{
+  color: #1ccc5b;
+  padding: 0.5vw 0.5vw;
+  /* background-color: red; */
+  text-decoration: none;
+  font-size: 1.5vw;
+}
+.LikeSection_Icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: 5vw;
+  color: #fff;
+}
+.LikeSection_head1{
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+  /* background-color: red; */
+  color: #fff;
+}
+.LikeSection_head2{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 2.5vw;
+  color: white;
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+  height: 50%;
+  /* background-color: royalblue; */
+}
+.LikeSection_head1-ProfileSection{
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  height: 25%;
+  /* background-color: blue; */
+  padding: 0.5vw 0.5vw;
+}
+.LikeSection_Profile_photo{
+  width: 8%;
+  height: 100%;
+  border-radius: 50%;
+}
+.LikeSection_Profile_photo img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+.LikeSection_Profile_username{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  /* background-color: #433083; */
+  padding: 0.5vw 0.5vw;
+}
+
+.LikeSection_Profile_username>h3{
+  color: white;
+
 }
