--- a/views/albumMusic.ejs
+++ b/views/albumMusic.ejs
@@ -17,7 +17,7 @@
             <h2>Spotify</h2>
          </div>
          <div class="songHeadingBox_2">
-            <h1>HELLO "user" !! WELCOME TO THE UPLOAD SECTION</h1>
+            <h1>HELLO <%=user.username%> !! WELCOME TO THE UPLOAD SECTION</h1>
             <p>Please fill all the details carefully.</p>
          </div>
        </div>
