--- a/views/albumUpload.ejs
+++ b/views/albumUpload.ejs
@@ -16,7 +16,7 @@
              <div class="brand">Spotify</div>
         </div>
         <div class="albumUpload_Subheading">
-            <h1>Hello !!! &nbsp;<span>User</span>&nbsp; Welcome to the ALBUM Upload Section</h1>
+            <h1>Hello !!! &nbsp;<span><%=user.username%></span>&nbsp; Welcome to the ALBUM Upload Section</h1>
         </div>
         <div class="albumUpload_Container">
               <div class="albumUpload_form-Section">
