--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -974,6 +974,9 @@ label {
 }
 /*------------------------------SONGS FOR ---------------------------------------------------------------------------------*/
 .dashBoardAlbumSection {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   width: 100%;
   padding: 0.5vw 0vw;
   min-height: 40vh;
@@ -996,7 +999,49 @@ label {
   color: #6b6969;
   font-weight: bold;
 }
-.dashBoardAlbumSection > .albumPoster {
+.dashBoardAlbumSection >.albumPoster_Wrapper{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 40vh;
+  padding: 0.5vw 0.5vw;
+  /* background-color: red; */
+  gap: 20px;
+}
+.dashBoardAlbumSection >.albumPoster_Wrapper>.albumPoster{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-items: center;
+   width: 20%;
+   height: 90%;
+   background-color: #1f1c1c;
+   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.dashBoardAlbumSection >.albumPoster_Wrapper>.albumPoster>.albumImage{
+   padding: 0.5vw 0.5vw;
+   width: 85%;
+   height: 80%;
+   /* background-color: #1c1630; */
+}
+.dashBoardAlbumSection >.albumPoster_Wrapper>.albumPoster>.albumImage img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.dashBoardAlbumSection >.albumPoster_Wrapper>.albumPoster>.albumLink{
+  width: 80%;
+  height: 10%;
+}
+.dashBoardAlbumSection >.albumPoster_Wrapper>.albumPoster>.albumLink>a{
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+}
+/* .dashBoardAlbumSection > .albumPoster {
   display: flex;
   justify-content: center;
   align-items: start;
@@ -1013,20 +1058,20 @@ label {
   width: 90%;
   height: 70%;
   margin-top: 1.0vw;
-  /* border-radius: 0px; */
+  border-radius: 0px;
 }
 .dashBoardAlbumSection > .albumPoster > .albumImage > a {
   width: 100%;
   height: 100%;
   background-color: #1ccc5b;
-  /* border-radius: 20px; */
+  border-radius: 20px;
 }
 .dashBoardAlbumSection > .albumPoster > .albumImage > a > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
-  /* border-radius: 20px; */
+  border-radius: 20px;
 }
 .dashBoardAlbumSection > .albumPoster > .albumImage > a{
   text-decoration: none;
@@ -1039,7 +1084,7 @@ label {
 .dashBoardAlbumSection > .albumPoster > .albumImage > a>#subheading{
   font-size: 0.8rem;
   color: #787676;
-}
+} */
 
 /*-*------------------------------------------------------------------------------------*/
 .dashboardOtherSection {
@@ -1407,6 +1452,7 @@ input[type="file"]::file-selector-button :hover {
 .UploadAlbum_Wrapper {
   display: flex;
   align-items: center;
+  gap: 10px;
   width: 100%;
   height: 70%;
   background-color: #4444;
@@ -1566,6 +1612,9 @@ th {
 }
 #row {
   margin-top: 1vw;
+}
+.ri-heart-line{
+  font-size: 1.8vw;
 }
 #row:hover {
   background-color: #444;
